packages/synapse-react-client/src/components/DownloadCart/DownloadIneligibleForPackagingFilesFromListButton.module.scss
.externalWarningPanel {
  position: fixed;
  bottom: calc(150px + 10px); // positioned above the progress panel
  right: 20px;
  z-index: 1300; // MUI modal z-index
  width: 500px;
  padding: 16px;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 12px;
  box-sizing: border-box;

  // Use &#{&} to increase specificity and override MUI Paper's default styles
  &#{&} {
    border-radius: 0;
    background-color: #223549;
  }
}

.warningIcon {
  flex-shrink: 0;

  // Use &#{&} to increase specificity and override MUI SvgIcon's default styles
  &#{&} {
    font-size: 40px;
  }
}

.warningTextContainer {
  flex: 1;
}

.warningTitleText {
  // Use &#{&} to increase specificity and override MUI Typography's default styles
  &#{&} {
    color: white;
    font-size: 14px;
    line-height: 1.4;
    font-weight: 700;
  }
}

.warningCloseButton {
  // Use &#{&} to increase specificity and override MUI IconButton's default styles
  &#{&} {
    color: white;
    align-self: flex-start;
    flex-shrink: 0;

    &:hover {
      color: #889baf;
    }
  }
}

.progressPanel {
  position: fixed;
  bottom: 20px;
  right: 20px;
  width: 500px;
  height: 150px;
  padding: 16px;
  display: flex;
  flex-direction: column;
  gap: 4px;
  box-sizing: border-box;

  // Use &#{&} to increase specificity and override MUI Paper's default styles
  &#{&} {
    border-radius: 0;
    background-color: #223549;
  }
}

.progressTitleText {
  // Use &#{&} to increase specificity and override MUI Typography's default styles
  &#{&} {
    color: white;
    font-size: 14px;
    line-height: 1.4;
  }
}

.progressFileNameText {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;

  // Use &#{&} to increase specificity and override MUI Typography's default styles
  &#{&} {
    color: #889baf;
    font-size: 13px;
    line-height: 1.4;
  }
}

.progressFooter {
  display: flex;
  flex: 1;
  gap: 8px;
  align-items: center;
  margin-top: auto;
}

.progressBarContainer {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.progressStats {
  display: flex;
  justify-content: space-between;
}

.progressStatsText {
  // Use &#{&} to increase specificity and override MUI Typography's default styles
  &#{&} {
    color: #889baf;
    font-size: 12px;
  }
}

.progressBar {
  :global(.MuiLinearProgress-bar) {
    background-color: #469285;
  }
}

.cancelButtonContainer {
  width: 80px;
  display: flex;
  justify-content: center;
  flex-shrink: 0;
}

.cancelButton {
  // Use &#{&} to increase specificity and override MUI Button's default styles
  &#{&} {
    color: white;
    border-color: white;
    min-width: 0;
    padding: 10px 16px;
    font-size: 0.75rem;
    line-height: 1;

    &:hover {
      border-color: #889baf;
      color: #889baf;
    }
  }
}

